--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-    "name": "next-portfolio-ghpages",
+    "name": "clumoss4.0",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
         "build": "next build",
         "export": "next export",
-        "predeploy": "npm run build && npm run export",
-        "deploy": "gh-pages -d out"
+        "start": "next start",
+        "deploy": "npm run build && npm run export && git add . && git commit -m 'Deploy' && git push origin main",
+        "lint": "next lint"
     },
     "dependencies": {
-        "gh-pages": "^6.3.0",
-        "next": "15.3.1",
+        "@tsparticles/engine": "^3.5.0",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.8.1",
+        "framer-motion": "^12.5.0",
+        "next": "^15.2.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-calendar": "^5.1.0",
+        "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
+        "react-tsparticles": "^2.12.2",
+        "reactflow": "^11.11.4",
+        "tsparticles": "^3.8.1",
+        "tsparticles-engine": "^2.12.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
         "eslint": "^9",
-        "eslint-config-next": "15.3.1",
+        "eslint-config-next": "15.2.2",
+        "gh-pages": "^6.3.0",
         "typescript": "^5"
     }
 }
