--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "export": "next export",
         "start": "next start",
-        "deploy": "npm run build && npm run export && git add . && git commit -m 'Deploy' && git push origin main",
+        "deploy": "npm run build && git add . && git commit -m 'Deploy' && git push origin main",
         "lint": "next lint"
     },
     "dependencies": {
