--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "homepage": "https://13919201819.github.io/next-portfolio-ghpages",
     "scripts": {
         "dev": "next dev",
-        "build": "next build && next exports",
+        "build": "next build",
         "start": "next start",
         "deploy": "npm run build && gh-pages -d out",
         "lint": "next lint"
